crates/aion-awl/tests/fixtures/rev2/step-bodies/valid/pipe_chain_stages.awl
//! Greet a name, keep the plain text, then shout it back out.
workflow pipe_chain_stages
  input name: String
  outcome shouted: type Shouted, route success

type Greeting { greeting: String }
type Shouted  { text: String }

worker voice
  action greet(name: String) -> Greeting
  action shout(text: String) -> Shouted

step greet
  name |> greet |> .greeting -> plain

step shout
  plain |> shout |> route shouted
