crates/aion-awl/tests/fixtures/rev2/step-bodies/invalid/pipe_route_payload_mismatch.awl
//! Route a greeting where a shout belongs.
workflow pipe_route_payload_mismatch
  input name: String
  outcome shouted: type Shouted, route success

type Greeting { greeting: String }
type Shouted  { text: String }

worker voice
  action greet(name: String) -> Greeting
  action shout(text: String) -> Shouted

step greet
  // defect: the piped value is a Greeting; outcome `shouted` carries a Shouted
  name |> greet |> route shouted
